# fabricQueryR

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  roadmap.html  roadmap.md  search.json  sitemap.xml
R/: auth.R  fabric_discovery.R  fabric_kql_query.R  fabric_livy.R  fabric_onelake_read_delta_table.R  fabric_pbi_dax_query.R  fabric_sql_connect.R  httr2_helpers.R  inform.R
man/: fabricQueryR-package.Rd  fabric_item.Rd  fabric_items.Rd  fabric_kql_query.Rd  fabric_livy_query.Rd  fabric_livy_run.Rd  fabric_onelake_read_delta_table.Rd  fabric_pbi_dax_query.Rd  fabric_sql_connect.Rd  fabric_sql_connection_info.Rd  fabric_sql_query.Rd  fabric_typed_items.Rd  fabric_workspaces.Rd
news/: index.html  index.md
playground/: livy.R  playground.R  test.R
reference/: fabricQueryR-package.html  fabricQueryR-package.md  fabricQueryR.html  fabric_item.html  fabric_item.md  fabric_items.html  fabric_items.md  fabric_kql_query.html  (+25 more)
tools/fabric-sandbox/: pyproject.toml
tools/fabric-sandbox/src/fabricqueryr_sandbox/: __init__.py  cli.py  credentials.py  deploy.py  discover.py  fabric_api.py  kusto_api.py  manifest.py  power_bi_api.py  seed.py  settings.py
tools/fabric-sandbox/tests/: test_deploy.py  test_discover.py  test_fabric_api.py  test_kusto_api.py  test_manifest.py  test_power_bi_api.py  test_settings.py  test_terraform_contract.py
(+23 files in other folders)
