[project]
name = "fabricqueryr-sandbox"
version = "0.1.0"
description = "Provision and seed the fabricQueryR integration-test sandbox"
requires-python = ">=3.11,<3.14"
dependencies = [
    "azure-identity>=1.23,<2",
    "azure-storage-file-datalake>=12.20,<13",
    "fabric-cicd>=1.2,<2",
    "httpx>=0.28,<1",
]

[project.scripts]
fabric-sandbox = "fabricqueryr_sandbox.cli:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fabricqueryr_sandbox"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]